# sqtop

./: .gitignore  .gitmodules  CONTRIBUTION.md  README.md  pyproject.toml  run.sh
slurm-cluster/: cluster.sh  docker-compose.yml
src/sqtop/: __init__.py  __main__.py  app.py  config.py  slurm.py
src/sqtop/styles/: app.tcss
src/sqtop/views/: array_tasks.py  attach_prompt.py  base.py  batch_script.py  bulk_actions.py  column_toggle.py  command_palette.py  confirm.py  dependency.py  detail.py  health.py  history.py  job_actions.py  job_detail.py  job_info.py  jobs.py  keybindings_help.py  log_viewer.py  mixins.py  node_detail.py  nodes.py  notify.py  partitions.py  settings.py  widgets.py
tests/: conftest.py  test_config_attach.py  test_config_full.py  test_jobs_columns.py  test_keybindings_help.py  test_modal_bindings.py  test_remote_config.py  test_slurm_actions.py  test_slurm_attach.py  test_slurm_parsing.py
