[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sqtop"
version = "0.1.0"
description = "A rich TUI dashboard for Slurm clusters — like htop, but for SLURM"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "rich>=13.0.0",
]

[project.scripts]
sqtop = "sqtop.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sqtop = ["styles/*.tcss"]

[dependency-groups]
dev = [
    "textual-dev>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
